[package]
name = "sec_review"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.0", features = ["rand_core","digest"] }
rand = "0.8"
rand_core = { version = "0.6.4", features = ["getrandom"] }
subtle = "2.6"
sha2 = "0.10.8"
hex = "0.4.3"
hex-literal = "0.2.2"
concat = "0.1"
